--- a/src/utils/_mixins.scss
+++ b/src/utils/_mixins.scss
@@ -1,5 +1,29 @@
-@mixin on1440 {
-  @media (min-width: 1440px) {
+@mixin on390 {
+  @media (min-width: 390px) {
+    @content;
+  }
+}
+
+@mixin on414 {
+  @media (min-width: 414px) {
+    @content;
+  }
+}
+
+@mixin on786 {
+  @media (min-width: 786px) {
+    @content;
+  }
+}
+
+@mixin on1024 {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
+
+@mixin on1280 {
+  @media (min-width: 1280px) {
     @content;
   }
 }
